--- a/src/app/back-office/header/header.component.html
+++ b/src/app/back-office/header/header.component.html
@@ -4,12 +4,8 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
+        <li>
+        <h5 class="modal-title" id="exampleModalLabel" style="font-weight: bold;">Gestion magasin et stock</h5>
       </li>
     </ul>
 
@@ -37,8 +33,8 @@
         </div>
       </li>
 
-     
-      
+
+
     </ul>
   </nav>
   <!-- /.navbar -->
