--- a/src/app/back-office/client/client/client.component.html
+++ b/src/app/back-office/client/client/client.component.html
@@ -30,7 +30,7 @@
             <p class="card-text"><strong> Catégorie : </strong>{{item.categorieClient}}</p>
             <p class="card-text"><strong> Profession: </strong>{{item.profession}}</p>
          <div class="mt-5">
-           <button (click)="deleteClient(item)" class="btn btn-danger" > <i class="fas fa-trash-alt"></i> Supprimer</button>
+           <button (click)="deleteClient(item.idClient)" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-danger" > <i class="fas fa-trash-alt"></i> Supprimer</button>
           <button type="button" (click)="updateClient(item)" data-bs-toggle="modal" data-bs-target="#updateModal" class="btn btn-dark ml-5 px-4" ><i class="fas fa-pen-alt"></i>Modifer</button>
           </div>
         </div>
@@ -38,6 +38,26 @@
   </div>
   </div>
 </div>
+
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: black; color: blanchedalmond;">
+        <h5 class="modal-title" id="deleteModalLabel" style="font-weight: bold; margin-left: 150px;">SUPPRESSION CLIENTS</h5>
+      <button type="button" class="btn-close" style="background-color: blanchedalmond;" data-bs-dismiss="modal" aria-label="Close" ></button>
+    </div>
+      <div class="modal-body">
+        <div class="mb-3">
+          <label for="nom" class="col-form-label">Voulez-vous supprimer ce client !</label>
+          </div>
+        </div>
+        <div class="modal-footer" >
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Annuler</button>
+          <button (click)="confirmDelete()"  class="btn btn-success" data-bs-dismiss="modal">Supprimer</button>
+        </div>
+        </div>
+        </div>
+        </div>
 
 
 
