--- a/src/app/back-office/side-bar/side-bar.component.html
+++ b/src/app/back-office/side-bar/side-bar.component.html
@@ -36,7 +36,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/back-office/product']" class="nav-link">
+          <a [routerLink]="['/back-office/facture']" class="nav-link">
             <i class="fas fa-file-invoice"></i>            <p>
               Factures
 
