--- a/src/app/back-office/rayon/rayon/rayon.component.html
+++ b/src/app/back-office/rayon/rayon/rayon.component.html
@@ -26,19 +26,20 @@
         <div class="card-header" style="background-color: #2E4053; font-weight: bold; color: white">
           {{item.libelle}}
         </div>
+        <div>        <button class=" btn btn-light w-100" style="color: steelblue; font-weight: bold;" type="button">Afficher les produits</button>      </div>
+
         <div class="card-body" style="background-color: powderblue;">
           <h5 class="card-title">Le Code: {{item.code}}</h5>
-         <div class="mt-5"> <button (click)="deleteRayon(item)" class="btn btn-danger "><i class="fas fa-trash-alt"></i></button>
-         
-           <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#ModalLabel" data-bs-whatever="@fat"><i class="fas fa-pen-alt"></i></button>
-          </div>
+         <div class="mt-5"> <button  (click)="getId(item.idRayon)" data-bs-toggle="modal" data-bs-target="#exampleModal1" class="btn btn-danger "><i class="fas fa-trash-alt"></i></button>
+                            <button type="button" (click)="updateRayon(item)" data-bs-toggle="modal" data-bs-target="#updateModal" class="btn btn-dark ml-5 px-4" ><i class="fas fa-pen-alt"></i>Modifer</button>
+           </div>
         </div>
       </div>
   </div>
   </div>
     </div>
   
-  
+  <!-- Modal Add -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -60,7 +61,7 @@
               </div>
             </div>
             <div class="mb-3">
-              <label for="code" class="col-form-label">Code:</label>
+              <label for="code" class="col-form-label">Code de Rayon:</label>
               <input  formControlName="code" type="number" class="form-control" id="code"
               name="code" placeholder="Ajouter votre Code ..." 
               [ngClass]="{ 'is-invalid':rayon.get('code').touched && rayon.get('code').invalid }" 
@@ -80,5 +81,73 @@
     </div>
   </div>
 
-  
+  <!-- Modifier -->
+
+<div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: black; color: blanchedalmond;">
+        <h5 class="modal-title" id="exampleModalLabel" style="font-weight: bold; margin-left: 150px;">MODIFIER RAYONS</h5>
+      <button type="button" class="btn-close" style="background-color: blanchedalmond;" data-bs-dismiss="modal" aria-label="Close" ></button>
+    </div>
+      <div class="modal-body">
+        <form [formGroup]="formUpdate" >
+
+
+          <div class="mb-3">
+            <label for="libelle" class="col-form-label">Libelle Rayon:</label>
+            <input formControlName="libelle" type="text" class="form-control" id="libelle"
+            name="libelle" placeholder="Insérer Libelle Rayon ..."
+            [ngClass]="{ 'is-invalid':formUpdate.get('libelle').touched && formUpdate.get('libelle').invalid }"
+
+            />
+            <div class="invalid-feedback" *ngIf="formUpdate.get('libelle').touched && formUpdate.get('libelle').invalid">
+              <p *ngIf="formUpdate.get('libelle').errors.required">Ajouté votre Libelle SVP!</p>
+            </div>
+          </div>
+
+
+          <div class="mb-3">
+            <label for="code" class="col-form-label">Code de Rayon:</label>
+            <input  formControlName="code" type="text" class="form-control" id="code"
+            name="code" placeholder="Insérer le Code de Rayon ..."
+            [ngClass]="{ 'is-invalid':formUpdate.get('code').touched && formUpdate.get('code').invalid }"
+
+            />
+            <div class="invalid-feedback" *ngIf="formUpdate.get('code').touched && formUpdate.get('code').invalid">
+              <p *ngIf="formUpdate.get('code').errors.required">Ajouté votre Code SVP!</p>
+            </div>
+          </div>
+
+        </form>
+      </div>
+
+      <div class="modal-footer" >
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Annuler</button>
+        <button  [disabled]= "formUpdate.invalid" (click)="confirmUpdate()"  class="btn btn-success" data-bs-dismiss="modal">Mettre à jour</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <!-- Modal supp -->
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: darkred;">
+        <h5 class="modal-title" id="exampleModalLabel" style="color: white;">Suppression de Rayon!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        "Etes-vous sûr de supprimer ce Rayon!"
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Non</button>
+        <button (click)="deleteRayon()" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Oui <i class="fas fa-trash-alt"></i></button>
+      </div>
+    </div>
+  </div>
+</div>
+
   
