--- a/src/app/back-office/stock/stock.component.html
+++ b/src/app/back-office/stock/stock.component.html
@@ -143,7 +143,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        "Etes-vous sur de supprimer ce stock!"
+        "Etes-vous sûr de supprimer ce stock!"
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Non</button>
