--- a/src/app/back-office/facture/facture/facture.component.html
+++ b/src/app/back-office/facture/facture/facture.component.html
@@ -23,7 +23,7 @@
   <div class="col-4 " *ngFor="let item of listFacture; let i = index">
       <div [class]="item.active?'card border-info mb-3':'card border-danger mb-3'"  >
 
-        <div [class]="item.active?'card-header text-dark bg-info mb-3':'card-header text-dark bg-danger mb-3'">
+        <div [class]="item.active?'card-header text-dark bg-info mb-3':'card-header text-white bg-danger mb-3'">
          <p><strong>Date du facture : </strong></p> {{item.dateFacture}}
         </div>
         <div class="card-body">
@@ -34,8 +34,8 @@
             <ng-template #nonActive><strong> Etat de la facture : </strong> Non Active</ng-template>
         <div class="mt-5">
            <button (click)="deleteFacture(item.idFacture)" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-danger" > <i class="fas fa-trash-alt"></i> Supprimer</button>
-         <!--   <button type="button" (click)="updateClient(item)" data-bs-toggle="modal" data-bs-target="#updateModal" class="btn btn-dark ml-5 px-4" ><i class="fas fa-pen-alt"></i>Modifer</button>
-          </div> -->
+           <button (click)="setFactureInactive(item.idFacture)" class="btn btn-dark ml-5 px-4" ><i class="fas fa-pen-alt"></i>Modifer</button>
+          </div>
         </div>
       </div>
   </div>
@@ -47,17 +47,17 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header" style="background-color: black; color: blanchedalmond;">
-        <h5 class="modal-title" id="deleteModalLabel" style="font-weight: bold; margin-left: 150px;">ANNULATION FACTURE</h5>
+        <h5 class="modal-title" id="deleteModalLabel" style="font-weight: bold; margin-left: 150px;">SUPPRESION FACTURE</h5>
       <button type="button" class="btn-close" style="background-color: blanchedalmond;" data-bs-dismiss="modal" aria-label="Close" ></button>
     </div>
       <div class="modal-body">
         <div class="mb-3">
-          <label for="nom" class="col-form-label">Voulez-vous annuler cette facture !</label>
+          <label for="nom" class="col-form-label">Voulez-vous supprimer cette facture !</label>
           </div>
         </div>
         <div class="modal-footer" >
           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Retour</button>
-          <button (click)="confirmDelete()"  class="btn btn-success" data-bs-dismiss="modal">Annuler Facture</button>
+          <button (click)="confirmDelete()"  class="btn btn-success" data-bs-dismiss="modal">Supprimer</button>
         </div>
         </div>
         </div>
