--- a/src/app/back-office/facture/facture/facture.component.html
+++ b/src/app/back-office/facture/facture/facture.component.html
@@ -34,13 +34,35 @@
             <ng-template #nonActive><strong> Etat de la facture : </strong> Non Active</ng-template>
         <div class="mt-5">
            <button (click)="deleteFacture(item.idFacture)" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-danger" > <i class="fas fa-trash-alt"></i> Supprimer</button>
-           <button (click)="setFactureInactive(item.idFacture)" class="btn btn-dark ml-5 px-4" ><i class="fas fa-pen-alt"></i>Modifer</button>
+           <button (click)="setFactureInactive(item.idFacture)" class="btn btn-warning ml-5 px-4" ><i class="fas fa-pen-alt"></i>Désactiver</button>
           </div>
         </div>
       </div>
   </div>
   </div>
 </div>
+
+
+
+<div class="modal fade" id="inactiveModal" tabindex="-1" aria-labelledby="inactiveModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: black; color: blanchedalmond;">
+        <h5 class="modal-title" id="deleteModalLabel" style="font-weight: bold; margin-left: 150px;">DESACTIVER FACTURE</h5>
+      <button type="button" class="btn-close" style="background-color: blanchedalmond;" data-bs-dismiss="modal" aria-label="Close" ></button>
+    </div>
+      <div class="modal-body">
+        <div class="mb-3">
+          <label for="nom" class="col-form-label">vVoulez-vous désactiver cette facture !</label>
+        </div>
+        <div class="modal-footer" >
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Retour</button>
+          <button (click)="confirmInactive()"  class="btn btn-success" data-bs-dismiss="modal">Désactiver</button>
+        </div>
+        </div>
+        </div>
+        </div>
+
 
 
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
