--- a/src/app/back-office/facture/facture/facture.component.html
+++ b/src/app/back-office/facture/facture/facture.component.html
@@ -11,16 +11,15 @@
 <div class="container">
 
 
-
   <div class="text-center " style="color:#4B4645;">   <h1>Liste des Factures</h1> </div>
-  <div class="text-center "> <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@fat"><i class="fas fa-plus"></i>Ajouter une facture</button>
+  <div class="text-center ">  <button (click)="triFactures()" type="button" class="btn btn-outline-primary mb-3" data-bs-whatever="@fat"><i class="fas fa-sort"></i>   Filtrer par montant</button>
   </div>
-
  <!--  <div  class="col-3 mb-3">
     <div > <input style="text-align: center; width: 1150px;" [(ngModel)]="searchVal" (keyup)="search()" class="form-control " type="search" placeholder="Rechercher un client..." aria-label="Search"></div>
    </div> -->
   <div class="row">
   <div class="col-4 " *ngFor="let item of listFacture; let i = index">
+
       <div [class]="item.active?'card border-info mb-3':'card border-danger mb-3'"  >
 
         <div [class]="item.active?'card-header text-dark bg-info mb-3':'card-header text-white bg-danger mb-3'">
@@ -30,12 +29,20 @@
           <h5 class="card-title"><strong>Montant du facture : </strong> {{item.montantFacture}}</h5>
             <p class="card-text"><strong> Montant du remise : </strong>{{item.montantRemise}}</p>
             <div *ngIf="item.active == true ; then active else nonActive"></div>
-            <ng-template #active><strong> Etat de la facture : </strong> Active</ng-template>
-            <ng-template #nonActive><strong> Etat de la facture : </strong> Non Active</ng-template>
+            <ng-template #active><strong> Etat de la facture : </strong> Activée</ng-template>
+            <ng-template #nonActive><strong> Etat de la facture : </strong> Désactivée</ng-template>
+            <div *ngFor="let detailItem of item.detailFacture; let j = index">
+              <p class="card-text"><strong> Quantité : </strong>{{detailItem.qte}}</p>
+            </div>
         <div class="mt-5">
-           <button (click)="deleteFacture(item.idFacture)" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-warning" > <i class="fas fa-trash-alt"></i> Supprimer</button>
-           <button (click)="setFactureInactive(item.idFacture)" data-bs-toggle="modal" data-bs-target="#inactiveModal" class="btn btn-danger ml-5 px-4" ><i class="fas fa-pen-alt"></i>Désactiver</button>
-           <button (click)="setFactureActive(item.idFacture)" data-bs-toggle="modal" data-bs-target="#activeModal" class="btn btn-info ml-5 px-4" ><i class="fas fa-pen-alt"></i>Activer</button>
+          <div *ngIf="item.active == false; then conditionActive else conditionInactive" ></div>
+           <button (click)="deleteFacture(item.idFacture)" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-outline-dark ml-3" > <i class="fas fa-trash-alt"></i>  Supprimer</button>
+           <ng-template #conditionInactive>
+           <button (click)="setFactureInactive(item.idFacture)" data-bs-toggle="modal" data-bs-target="#inactiveModal" class="btn btn-outline-danger ml-5 px-4" ><i class="fas fa-times"></i>  Désactiver</button>
+          </ng-template>
+          <ng-template #conditionActive>
+           <button (click)="setFactureActive(item.idFacture)" data-bs-toggle="modal" data-bs-target="#activeModal" class="btn btn-outline-info ml-5 px-4" ><i class="fas fa-check-double"></i>  Activer</button>
+          </ng-template>
           </div>
         </div>
       </div>
@@ -54,18 +61,19 @@
     </div>
       <div class="modal-body">
         <div class="mb-3">
-          <label for="nom" class="col-form-label">vVoulez-vous désactiver cette facture !</label>
+          <label for="nom" class="col-form-label">Voulez-vous désactiver cette facture !</label>
         </div>
         <div class="modal-footer" >
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Retour</button>
-          <button (click)="confirmInactive()"  class="btn btn-success" data-bs-dismiss="modal">Désactiver</button>
+
+          <button (click)="confirmInactive()"  class="btn btn-outline-success" data-bs-dismiss="modal">Désactiver</button>
+          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Retour</button>
         </div>
         </div>
         </div>
         </div></div>
 
 
-        <div class="modal fade" id="activeModal" tabindex="-1" aria-labelledby="activeModalLabel" aria-hidden="true">
+<div class="modal fade" id="activeModal" tabindex="-1" aria-labelledby="activeModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header" style="background-color: black; color: blanchedalmond;">
@@ -78,12 +86,12 @@
                   </div>
                 </div>
                 <div class="modal-footer" >
-                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Retour</button>
-                  <button (click)="confirmActive()"  class="btn btn-success" data-bs-dismiss="modal">Activer</button>
+                  <button (click)="confirmActive()"  class="btn btn-outline-success" data-bs-dismiss="modal">Activer</button>
+                  <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Retour</button>
                 </div>
                 </div>
                 </div>
-                </div>
+        </div>
 
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -98,8 +106,8 @@
           </div>
         </div>
         <div class="modal-footer" >
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Retour</button>
-          <button (click)="confirmDelete()"  class="btn btn-success" data-bs-dismiss="modal">Supprimer</button>
+          <button (click)="confirmDelete()"  class="btn btn-outline-success" data-bs-dismiss="modal">Supprimer</button>
+          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Retour</button>
         </div>
         </div>
         </div>
