--- a/src/app/back-office/product/product.component.html
+++ b/src/app/back-office/product/product.component.html
@@ -1,3 +1,6 @@
+<button class="btn btn-sm btn-neutral" (click)='triASC()'>Trie Up</button>
+    <button class="btn btn-sm btn-neutral" (click)='triDESC()'>Trie Down</button>
+    <input class="form-control" placeholder="Search" type="text" [(ngModel)]="SearchVal" (keyup)="Search()">
 <table class="table user-list">
   <thead>
     <tr>
